# ConfHub

./: .gitignore  CHANGELOG.md  README.md  main_test.py  pyproject.toml  requirements.txt
confhub/: __init__.py  __main__.py  __meta__.py  builder.py  commands.py  console.py  enums.py  exceptions.py  models.py  reader.py  setup_logger.py  templates.py
confhub/core/: block.py  error.py  fields.py  parsing.py  types.py
confhub/model_processors/: __init__.py  generate_url.py
confhub/utils/: __inspect.py  __models.py  gitignore.py
tests/: .secrets.yml  example__secrets.yml  settings.yml  test_confhub.py
