[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confhub"
description = 'Configuration add-on to Dynaconf'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Adam Morington", email = "morington.mail@gmail.com" },
]
keywords = [
    "config",
    "configuration",
    "cfg",
    "confhub",
    "setting",
    "settings",
    "dynaconf",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities"
]
dependencies = [
    "pytest>=8.1.1",
    "structlog>=24.1.0",
    "yarl>=1.9.4",
    "PyYAML>=6.0.1",
]
dynamic = ["version"]

[tool.hatch.version]
path = "confhub/__meta__.py"

[project.urls]
Repository = "https://github.com/morington/confhub/"

[project.scripts]
confhub = "confhub.__main__:main"