[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confhub"
description = 'Configuration add-on to Dynaconf'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Adam Morington", email = "morington.mail@gmail.com" },
]
keywords = [
    "config",
    "configuration",
    "cfg",
    "confhub",
    "setting",
    "settings",
    "dynaconf",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities"
]
dependencies = [
    "dynaconf>=3.2.5",
    "pytest>=8.1.1",
    "structlog>=24.1.0",
    "yarl>=1.9.4",
    "python-dotenv>=1.0.1"
]
dynamic = ["version"]

[tool.hatch.version]
path = "confhub/__meta__.py"

[project.urls]
Repository = "https://github.com/morington/confhub/"

[project.scripts]
confhub = "confhub.__main__:main"

[tool.ruff]
# match black
line-length = 120
target-version = "py311"
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
]
